Fix the dark mode style on the sidebar

--- a/styles/ant.less
+++ b/styles/ant.less
@@ -18,6 +18,10 @@ body {
   padding: 16px;
 }
 
+.ant-menu-item a {
+  color: var(--cr-primary-text);
+}
+
 .ant-menu-item a:hover, .ant-menu-item-selected a {
   color: var(--cr-primary-color);
 }
