--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -74,10 +74,10 @@
   img {
     height: 22px;
     width: 22px;
+    border-radius: 999px;
   }
 
   img[alt="sun"] {
-    border-radius: 2px;
     padding: 2px;
     background-color: #2B2111;
   }
