--- a/styles/navigationmenu.module.less
+++ b/styles/navigationmenu.module.less
@@ -9,7 +9,7 @@
 
   :global(.ant-menu-submenu-title) {
     cursor: auto;
-    border-top: 1px solid #F0F0F0;
+    border-top: 1px solid var(--cr-primary-border);
     margin-bottom: 0;
 
     :global(.ant-menu-title-content) {
