--- a/styles/sider.module.less
+++ b/styles/sider.module.less
@@ -3,7 +3,7 @@
 .sidebar {
   background: var(--cr-primary-bg);
   padding: 16px 0 128px 0;
-  border-right: 1px solid #F0F0F0;
+  border-right: 1px solid var(--cr-primary-border);
 
   :global(.ant-layout-sider-trigger) {
     top: 0;
