--- a/styles/socials.module.less
+++ b/styles/socials.module.less
@@ -4,8 +4,8 @@
   width: 100%;
   justify-content: center;
   padding: 10px 0;
-  border-top: 1px solid #F0F0F0;
-  border-bottom: 1px solid #F0F0F0;
+  border-top: 1px solid var(--cr-primary-border);
+  border-bottom: 1px solid var(--cr-primary-border);
 
   img {
     width: 28px;
